<resources>
    <string name="app_name">Rebble Store</string>
    <string name="watchfaces">Watchfaces</string>
    <string name="apps">Apps</string>
    <string name="search">Search</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- TODO -->
    <string name="nav_item">nav menu item</string>
    <string name="version">1.0</string>
    <string name="see_all">SEE ALL</string>
    
    <!-- WatchFace Application Details Page -->
    <string name="add">ADD</string>
    <string name="description">DESCRIPTION</string>
    <string name="developer">DEVELOPER</string>
    <string name="category">CATEGORY</string>
    <string name="updated">UPDATED</string>
    <string name="app_version">VERSION</string>

    <string name="transition_name_image" translatable="false">TRANSITION:image</string>
    <string name="app_uuid">UUID</string>
    <string name="source">SOURCE</string>
    <string name="website">WEBSITE</string>
</resources>
