<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="app"
            type="io.rebble.store.viewmodel.WatchFaceApplicationDetailsViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/txt_description_value"
            style="@style/text_details_value"
            android:layout_marginTop="4dp"
            android:text="@{app.description}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_source_url"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:text="@string/source"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_website_url"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:text="@string/website"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>




        <TextView
            android:id="@+id/txt_developer_label"
            style="@style/text_details_label"
            android:layout_marginTop="16dp"
            android:text="@string/developer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_description_value" />

        <TextView
            android:id="@+id/txt_developer_value"
            style="@style/text_details_value"
            android:text="@{app.author}"
            app:layout_constraintBaseline_toBaselineOf="@id/txt_developer_label"
            app:layout_constraintStart_toEndOf="@id/txt_developer_label" />

        <TextView
            android:id="@+id/txt_category_label"
            style="@style/text_details_label"
            android:layout_marginTop="4dp"
            android:text="@string/category"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_developer_label" />

        <TextView
            android:id="@+id/txt_category_value"
            style="@style/text_details_value"
            android:text="@{app.category}"
            app:layout_constraintBaseline_toBaselineOf="@id/txt_category_label"
            app:layout_constraintStart_toStartOf="@id/txt_developer_value" />

        <TextView
            android:id="@+id/txt_updated_label"
            style="@style/text_details_label"
            android:layout_marginTop="4dp"
            android:text="@string/updated"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_category_label" />

        <TextView
            android:id="@+id/txt_updated_value"
            style="@style/text_details_value"
            android:text="@{app.updated}"
            app:layout_constraintBaseline_toBaselineOf="@id/txt_updated_label"
            app:layout_constraintStart_toStartOf="@id/txt_developer_value" />

        <TextView
            android:id="@+id/txt_version_label"
            style="@style/text_details_label"
            android:layout_marginTop="4dp"
            android:text="@string/app_version"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_updated_label" />

        <TextView
            android:id="@+id/txt_version_value"
            style="@style/text_details_value"
            android:text="@{app.version}"
            app:layout_constraintBaseline_toBaselineOf="@id/txt_version_label"

            app:layout_constraintStart_toStartOf="@id/txt_developer_value" />

        <TextView
            android:id="@+id/txt_uuid_label"
            style="@style/text_details_label"
            android:layout_marginTop="4dp"
            android:text="@string/app_uuid"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_version_label" />

        <TextView
            android:id="@+id/txt_uuid_value"
            style="@style/text_details_value"
            android:text="@{app.UUID}"
            app:layout_constraintBaseline_toBaselineOf="@id/txt_uuid_label"
            app:layout_constraintStart_toStartOf="@id/txt_developer_value" />
    </LinearLayout>
</layout>